--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim-pathogen"]
 	path = vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "bundle/findstr"]
+	path = bundle/findstr
+	url = git://github.com/vim-scripts/findstr.vim.git
