a.vim is back again
This time, fetched from github.com/vim-scripts/a.vim which is probably
better maintained than my own little fork.

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/findstr"]
 	path = bundle/findstr
 	url = git://github.com/vim-scripts/findstr.vim.git
+[submodule "bundle/a"]
+	path = bundle/a
+	url = git://github.com/vim-scripts/a.vim.git
