--- a/.gitmodules
+++ b/.gitmodules
@@ -19,6 +19,6 @@
 [submodule "bundle/ctrlp"]
 	path = bundle/ctrlp
 	url = git://github.com/kien/ctrlp.vim
-[submodule "bundle\\matchit"]
-	path = bundle\\matchit
+[submodule "bundle/matchit"]
+	path = bundle/matchit
 	url = https://github.com/vim-scripts/matchit.zip
