--- a/.gitmodules
+++ b/.gitmodules
@@ -21,4 +21,4 @@
 	url = git://github.com/kien/ctrlp.vim
 [submodule "bundle/matchit"]
 	path = bundle/matchit
-	url = https://github.com/vim-scripts/matchit.zip
+	url = git://github.com/vim-scripts/matchit.zip
