--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "bundle/matchit"]
 	path = bundle/matchit
 	url = git://github.com/vim-scripts/matchit.zip
+[submodule "bundle/vim-haskellConceal"]
+	path = bundle/vim-haskellConceal
+	url = https://github.com/Twinside/vim-haskellConceal.git
