--- a/.gitmodules
+++ b/.gitmodules
@@ -1,39 +1,36 @@
 [submodule "bundle/vim-colors-solarized"]
-	path = bundle/vim-colors-solarized
+	path = pack/vim-colors-solarized/start/vim-colors-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
 [submodule "bundle/vim-fugitive"]
-	path = bundle/vim-fugitive
+	path = pack/vim-fugitive/start/vim-fugitive
 	url = git://github.com/tpope/vim-fugitive.git
-[submodule "vim-pathogen"]
-	path = vim-pathogen
-	url = git://github.com/tpope/vim-pathogen.git
 [submodule "bundle/findstr"]
-	path = bundle/findstr
+	path = pack/findstr/start/findstr
 	url = git://github.com/vim-scripts/findstr.vim.git
 [submodule "bundle/a"]
-	path = bundle/a
+	path = pack/a/start/a
 	url = git://github.com/vim-scripts/a.vim.git
 [submodule "bundle/actionscript"]
-	path = bundle/actionscript
+	path = pack/actionscript/start/actionscript
 	url = git://github.com/vim-scripts/actionscript.vim--Leider.git
 [submodule "bundle/ctrlp"]
-	path = bundle/ctrlp
+	path = pack/ctrlp/start/ctrlp
 	url = git://github.com/kien/ctrlp.vim
 [submodule "bundle/matchit"]
-	path = bundle/matchit
+	path = pack/matchit/start/matchit
 	url = git://github.com/vim-scripts/matchit.zip
 [submodule "bundle/vim-haskellConceal"]
-	path = bundle/vim-haskellConceal
+	path = pack/vim-haskellConceal/start/vim-haskellConceal
 	url = https://github.com/Twinside/vim-haskellConceal.git
 [submodule "bundle/syntastic"]
-	path = bundle/syntastic
+	path = pack/syntastic/start/syntastic
 	url = https://github.com/scrooloose/syntastic
 [submodule "bundle/vim-hdevtools"]
-	path = bundle/vim-hdevtools
+	path = pack/vim-hdevtools/start/vim-hdevtools
 	url = https://github.com/bitc/vim-hdevtools.git
 [submodule "bundle/vim-ansible-yaml"]
-	path = bundle/vim-ansible-yaml
+	path = pack/vim-ansible-yaml/start/vim-ansible-yaml
 	url = git://github.com/chase/vim-ansible-yaml.git
 [submodule "bundle/vim-vinegar"]
-	path = bundle/vim-vinegar
+	path = pack/vim-vinegar/start/vim-vinegar
 	url = git://github.com/tpope/vim-vinegar.git
