--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = https://github.com/vim-scripts/actionscript.vim--Leider
 [submodule "bundle/ctrlp"]
 	path = pack/ctrlp/start/ctrlp
-	url = https://github.com/kien/ctrlp
+	url = https://github.com/ctrlpvim/ctrlp.vim
 [submodule "bundle/matchit"]
 	path = pack/matchit/start/matchit
 	url = https://github.com/vim-scripts/matchit
